--- a/.gitignore
+++ b/.gitignore
@@ -49,8 +49,8 @@ dlldata.c
 
 # .NET Core
 project.lock.json
-appsettings.json
-appsettings.Development.json
+# appsettings.json
+# appsettings.Development.json
 project.fragment.lock.json
 artifacts/
 **/Properties/launchSettings.json
