employee for alignment

--- a/src/Assignment.BackEnd/EmployeeApp/appsettings.json
+++ b/src/Assignment.BackEnd/EmployeeApp/appsettings.json
@@ -1,7 +1,7 @@
 {
 
   "ConnectionStrings": {
-    "AppConnectionString": "Server=HASIB; Database=Employee_Db; Integrated Security=True"
+    "AppConnectionString": "Server=SHAN; Database=Employee_Db; Integrated Security=True"
   },
 
 
