--- a/src/Assignment.BackEnd/EmployeeApp/appsettings.json
+++ b/src/Assignment.BackEnd/EmployeeApp/appsettings.json
@@ -1,7 +1,9 @@
 {
+  //"Data" "Source=shan;Initial",
+  //"Catalog=Employee_Db;Integrated" "Security=True",
 
   "ConnectionStrings": {
-    "AppConnectionString": "Server=SHAN; Database=Employee_Db; Integrated Security=True"
+    // "AppConnectionString": "Server=SHAN; Database=Employee_Db; Integrated Security=True"
   },
 
 
