--- a/src/Assignment.BackEnd/EmployeeApp/appsettings.json
+++ b/src/Assignment.BackEnd/EmployeeApp/appsettings.json
@@ -3,7 +3,9 @@
   //"Catalog=Employee_Db;Integrated" "Security=True",
 
   "ConnectionStrings": {
-    // "AppConnectionString": "Server=SHAN; Database=Employee_Db; Integrated Security=True"
+    "AppConnectionString": "Server=SHAN; Database=Employee_Db; Integrated Security=True"
+    //"AppConnectionString": "Data",
+    //"Source=shan;Initial Catalog=Employee_Db;Integrated","Security=True";
   },
 
 
